Diep TD Changelog
Date format is YYYY-MM-DD
Updates (usually just commits) are separated by new lines
Sub-topics of major changes are intented



2018-12-31

Added Bulk Healer.
    Upgrades from healer II
    Very inefficient in terms of power usage, but is cheaper and heals faster than healer III
Added Assassin and Ranger towers
    Upgrade path is: Sniper -> Assassin -> Ranger
    FOV doubles each time, along with a slight increase in damage.
    Reload is half of sniper for both assassin and ranger.

2018-12-30

Miner couldn't be placed from clicking, this bug has now been fixed.

Fixed bug which only recognized the original generators as actual generators.
New tanks Added
    Healer II and Healer III, both are healers which heal faster (and use power more efficiently).
    Generators II, III, and IIII (might change to IV), they generate and store more power than before.

Tank-twin-triple shot bug fixed. Tanks being upgraded to twins would do an additional upgrade to triple shot. This has now been fixed.

2018-12-29

Added Changelog
Fixed GUI text formatting
    Removed underscores from tank names
    Removed "_Tower" suffix

Added Destroyer, Machine Gun, Sniper, Triangle Miner, and Pentagon Miner
    Destroyer, Machine Gun, and Sniper are combat tanks from diep.io
        Sniper has higher range and hgiher damaged but half fire rate
        Machine gun has higher fire rate but bullets are spread (crowd control)
        Destroyer fires extremely damaging bullets at a low fire rate (can one-shot a basic tank)
    Triangle Miner and Pentagon Miner take the same time to mine their respective shapes as an ordinary miner takes to mine a square (and are proportionately more durable and costly)
Massive changes to GUI
    Added GUI for upgrades
    Regular GUI is now temporary
    Refactored upgrade system to make adding tanks easier
        Now only tanks and their upgrades need to be specified in order for upgrade menus to appear, no other code is required