@@ -23,12 +23,12 @@
         <script type="application/javascript" src="init.js"></script>
         <script type="application/javascript" src="funcs.js"></script>
         <script type="application/javascript" src="draw.js"></script>
-        <script type="application/javascript" src="drawobjs.js"></script>
         <script type="application/javascript" src="gameobj.js"></script>
         <script type="application/javascript" src="tanks.js"></script>
         <script type="application/javascript" src="towers.js"></script>
         <script type="application/javascript" src="miscentity.js"></script>
         <script type="application/javascript" src="upgrade.js"></script>
+        <script type="application/javascript" src="levels.js"></script>
         <script type="application/javascript" src="loop.js"></script>
     </body>
 </html>
